--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^5.1.1"
   },
